# OpenPEARL

./: .gitignore  .gitmodules
openpearl-code/: .project  Makefile  eclipse-openpearl-style.xml  installPackages  prl.inc  prlpp  showVersion.inc
openpearl-code/compiler/: Makefile  Makefile.inc  codestyle.txt  prl_cc.inc
openpearl-code/compiler/doc/: OpenPEARL-Visitors.tex
openpearl-code/compiler/src/: IMC.stg  Makefile  OpenPearl.g4  OpenPearlCpp.stg  SmallPearl.g4  SmallPearlCpp.stg
openpearl-code/compiler/tools/: openpearl-mode.el
openpearl-code/configuration/: .config  .config.old  jenkins.config
openpearl-code/configuration/fm/: compiler.fm  esp32.fm  linux.fm  lpc1768.fm  runtime.fm  simulators.fm
openpearl-code/configuration/include/: auto.conf  auto.conf.cmd  autoconf.h  autoconf.tex
openpearl-code/demos/: Extruder.prl  ProdCon.prl  README  UnixSignal.prl  Wassertank.prl  consoleDemo.prl  directFileAccess.prl  fixedDiv.prl  hanoi.prl  loggingExample.prl  pearl_log.txt  philosWithRef.prl  refProc.prl  signalDemo.prl  watertank.prl  watertank_data.csv
openpearl-code/demos/filamentExtruder/: Extruder.prl  Extruder_test.prl  build.sh  example.prl  extruderSim.cfg  extruderSim_backup.cfg  extruderSim_for_test.cfg  extruder_data.csv  pearl_log.txt
openpearl-code/demos/linux/: PipeDemo.prl  PipeTest.prl  TcpIpSocket.prl  pearl_log.txt
openpearl-code/docker/: .config  Dockerfile
openpearl-code/errorChecker/: Makefile  config.h  errorParser.c  genExpectations.c  runTest.sh
openpearl-code/imc2/: CMakeLists.txt
openpearl-code/imc2/Testing/Temporary/: CTestCostData.txt
openpearl-code/imc2/doc/: demo.prl  documentation.tex  intro.tex  literature.tex  plattform_xml.tex  structure_import_export.tex
openpearl-code/imc2/scripts/: utils.chaiscript
openpearl-code/imc2/src/: CMakeLists.txt  Makefile  cmake_install.cmake  imc.hpp.in  logger.cpp  logger.hpp  main.cpp  util.cpp  util.hpp
openpearl-code/imc2/src/chaiscript-stamp/: chaiscript-gitclone-lastrun.txt
openpearl-code/imc2/src/checker/: check.cpp  check.hpp  checker.cpp  checker.hpp  error.cpp  error.hpp
openpearl-code/imc2/src/checker/checks/: check_associations_provided.cpp  check_associations_provided.hpp  check_each_spc_has_one_dcl.cpp  check_each_spc_has_one_dcl.hpp  check_params_match.cpp  check_params_match.hpp  check_pin_layout.cpp  check_pin_layout.hpp  check_username_sysname_mappings.cpp  check_username_sysname_mappings.hpp
openpearl-code/imc2/src/codegen/: codegen.cpp  codegen.hpp
openpearl-code/imc2/src/docopt-stamp/: docopt-gitclone-lastrun.txt
openpearl-code/imc2/src/expr/: computer.cpp  computer.hpp
openpearl-code/imc2/src/reader/: common.cpp  common.hpp  module.cpp  module.hpp  platform.cpp  platform.hpp  reader.cpp  reader.hpp
openpearl-code/imc2/src/reader/module/: problem.cpp  problem.hpp  system.cpp  system.hpp
openpearl-code/imc2/src/types/: common.hpp  module.hpp  platform.cpp  platform.hpp  problem.cpp  problem.hpp  system.cpp  system.hpp
openpearl-code/imc2/tests/001/: module.xml  platform.xml
openpearl-code/imc2/tests/002/: module.xml  platform.xml  system.cc
openpearl-code/imc2/tests/003/: module.xml  platform.xml
openpearl-code/imc2/tests/004/: module_1.xml  module_2.xml  platform.xml
openpearl-code/imc2/tests/005/: module.xml  platform.xml
openpearl-code/imc2/tests/006/: module.xml  platform.xml
openpearl-code/imc2/tests/007/: module.xml  platform.xml
openpearl-code/imc2/tests/008/: module.xml  platform.xml
openpearl-code/imc2/tests/009/: module.xml  platform.xml
openpearl-code/imc2/tests/010/: module.prl  module.xml  platform.xml
openpearl-code/imc2/tests/011/: module.prl  module.xml  platform.xml
openpearl-code/imc2/tests/012/: module.xml  platform.xml
openpearl-code/imc3/: Makefile  imc.inc  system.cc
openpearl-code/imc3/doc/: imc.tex  plattform_xml.tex  structure_import_export.tex  usage.tex
openpearl-code/imc3/src/: Makefile  imc.inc  overview.html
openpearl-code/language_report/: 03-language_forms.tex  04-program_structure.tex  05-variables_and_constants.tex  06-expressions.tex  07-sequential.tex  08-procedures.tex  09-parallel_activities.tex  10-input_and_output.tex  11-signals.tex  12-preprocessor.tex  90-appendix.tex  Makefile  ParameterSpecification.bnf  ProcedureSpecification.bnf  SignalFinalStatement.bnf  SignalReaction.bnf  TypeAttributeForArray.bnf  p-report.tex
openpearl-code/language_report/bnf/: Declaration.bnf  InduceStatement.bnf  ParameterType.bnf  SchedulingSignalReaction.bnf  SignalReaction.bnf  TypeRealTimeObject.bnf
openpearl-code/preprocessor/: README.org
openpearl-code/runtime/: Makefile  cc_o.inc  o_bin.inc  targets.inc
openpearl-code/runtime/common/: ADS1015SE.cc  ADS1015SE.h  Array.cc  Array.h  BME280.cc  BME280.h  BME280.xml  BitSlice.h  BitString.h  Bolt.cc  Bolt.h  Can2AMessage.h  CharSlice.cc  CharSlice.h  Character.cc  Character.h  Clock.cc  Clock.h  ConsoleCommon.cc  ConsoleCommon.h  Control.cc  Control.h  Dation.h  DationPG.cc  DationPG.h  DationRW.cc  DationRW.h  DationTS.cc  DationTS.h  Duration.cc  Duration.h  Files.common  Fixed.cc  Fixed.h  Fixed63.cc  Fixed63.h  Float.h  FullDuplexDationAbortNB.cc  GenerateSignalDefinitions.pl  GetBitString.cc  (+91 more)
openpearl-code/runtime/doc/: Makefile  bolt.tex  changeLog.tex  inOutput.tex  intro.tex  procedures.tex  runtime.tex  semaphore.tex  signals.tex  struct_type_array.tex  task.tex
openpearl-code/runtime/esp32/: Esp32UartCommsDriver.cc  Esp32UartCommsDriver.h  (+7 more)
openpearl-code/runtime/esp32/OpenPEARLProject/main/: CMakeLists.txt  Console.cc  Console.h  Esp32Clock.cc  Esp32I2CBus.cc  Esp32I2CBus.h  Esp32I2CBus.xml  Esp32MqttTcpClient.cc  Esp32MqttTcpClient.h  Esp32MqttTcpClient.xml  Esp32Nvs.h  Esp32Uart.cc  Esp32Uart.h  Esp32WifiConfig.cc  Esp32WifiConfig.h  Log.cc  PEARL  PearlIncludes.h  StdOut.cc  StdOut.h  addOns  allTaskPriorities.h  main.cc  system.cc  testprog.cc  testprog.prl
openpearl-code/static_analyzer/: Makefile  run_static_analyzer.inc
openpearl-code/testsuite/: Makefile  READ.ME  getTestNumbers.sh  run-compile.sh  runtest.sh
(+971 files in other folders)
